--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "next": "^15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.11",
+    "typescript": "^5.8.2"
   }
 }
